# codira

./: .gitignore  .gitmessage  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  FIX-DUCKDB-SLOWDOWN  Makefile  README.md  conftest.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.codira/: config.toml
.githooks/: commit-msg  commit-msg.py  pre-commit  pre-push
.github/workflows/: ci.yml  commit-message-check.yml  docs.yml  release.yml
benchmarks/: embedding-engine-matrix.json  embedding-model-candidates.json  onnx-parameter-sweep.json  split-embedding-engine-pairs.json
docs/: .pages  CONTRIBUTING.md  configuration.md  getting_started.md  index.md  scripts.md
docs/adr/: .pages  ADR-001-rrf-multichannel.md  ADR-002-prefix-filtering.md  ADR-003-query-json-output.md  ADR-004-pluggable-backends-migration-plan.md  ADR-005-real-persisted-embeddings-durable-symbol-identity.md  ADR-006-capability-driven-signal-layer.md  ADR-007-first-party-package-boundary.md  ADR-008-batched-embedding-generation-and-tunable-inference-runtime.md  ADR-009-end-user-distribution-and-publishing-model.md  ADR-010-call-graph-retrieval-producer-and-user-surfaces.md  ADR-011-packaging-release-migration-sequence-v2-0-0.md  ADR-012-phase-2-package-set-default-analyzers-backend.md  ADR-013-final-multirepo-repository-set-release-coordination-policy.md  ADR-014-canonical-monorepo-generated-distribution-repositories.md  ADR-015-codira-development-roadmap.md  ADR-016-richer-symbol-modeling-for-overload-metadata-and-named-declarations.md  ADR-017-python-runtime-support-policy.md  ADR-018-ci-platform-coverage-policy.md  ADR-019-index-freshness-automatic-rebuild-policy.md  ADR-020-backend-isolated-repository-test-policy.md  ADR-021-codira-configuration-hierarchy-runtime-policy.md  ADR-022-embedding-engine-and-vector-store-plugins.md  index.md
docs/architecture/: core-contracts.md  index.md  indexing-pipeline.md  language-analyzers.md  plugin-model.md  query-pipeline.md  storage-backends.md  system-overview.md
docs/plugins/: analyzers.md  backends.md  getting-started.md  index.md  packaging.md  semgrep.md  tutorial.md
docs/process/: assumption-audit-2026-04-24.md  backend-agnostic-core-execution.md  branching.md  codira-development-roadmap.md  decisions.md  duckdb-slowdown-fix-2026-06-25.md  embedding-engine-vector-store-execution.md  embedding-performance-execution.md  issue-001-real-embeddings-execution.md  issue-003-docs-retrieval-execution.md  issue-009-capability-signal-layer-execution.md  issue-009-capability-signal-layer-inventory.md  issue-010-call-graph-retrieval-producer-execution.md  issue-010-duckdb-backend.md  issue-011-12-multirepo-v2-execution.md  issue-011-cpp-analyzer-execution-ledger.md  issue-011-optional-plugin-shim-inventory.md  issue-017-configuration-system-execution.md  issue-021-c-constants-design-check.md  issue-021-rich-symbol-modeling-execution.md  issue-025-c-const-declarations-design.md  issue-027-plugin-configuration-injection-execution.md  issue-028-embedding-calibration-execution.md  issue-030-backend-performance-execution.md  issue-057-embedding-performance-execution.md  migration-plan-revised.md  multirepo-ci-decomposition.md  multirepo-split-manifest.md  performance-benchmarking.md  python-package-publishing-walkthrough.md  roadmap.md  semgrep-architecture-guardrails.md  test-current-situation.md  v2-0-0-migration-notes.md
docs/release/: checklist.md  process.md
docs/stylesheets/: site.css
examples/plugins/codira_demo_analyzer/: README.md  pyproject.toml
examples/plugins/codira_demo_analyzer/src/codira_demo_analyzer/: __init__.py
examples/plugins/codira_demo_backend/: README.md  pyproject.toml
examples/plugins/codira_demo_backend/src/codira_demo_backend/: __init__.py
fixtures/: README.md
fixtures/src/: core_backend_import_violation.py  core_sqlite_outside_allowlist_violation.py  query_config_resolution_violation.py  random_violation.py
scripts/: __init__.py  audit.py  audit.sh  benchmark_campaign.py  benchmark_embedding_startup.py  benchmark_index.py  benchmark_release.py  benchmark_timing.py  bootstrap_dev_environment.py  build-clean.sh  build_first_party_packages.py  build_release_artifacts.py  changelog_guard.py  changelog_guard.sh  check_commit_messages.py  clean_repo.py  compare_embedding_engines.py  configure_index_backend.py  demo.py  download_embedding_model.py  embedding_engine_matrix_plan.py  embedding_model_manifest.py  first_party_packages.py  future_repo_ci.py  future_repo_export.py  future_repo_split_manifest.py  generate_github_snapshot.py  install_first_party_packages.py  install_repo_git_config.py  new_decision.py  provision_embedding_model.py  rehearse_release_installs.py  release_audit.py  release_audit.sh  release_rel.py  release_rel.sh  release_system_selfcheck.py  release_system_selfcheck.sh  ri_fix.py  run_bk_cpp_baseline.sh  (+18 more)
semgrep/: README.md
semgrep/rules/: architecture.yml  determinism.yml  plugins.yml
src/codira/: __init__.py  calibration.py  capabilities.py  cli.py  config.py  contracts.py  docstring.py  indexer.py  models.py  normalization.py  parser_ast.py  path_resolution.py  plugin_config.py  types.py  (+10 more)
tests/: memory_backend.py  test_bootstrap_scripts.py  test_calibration.py  test_call_graph.py  test_capabilities.py  test_characterization_phase2.py  test_cli_audit_aggregation.py  test_commit_message_check.py  test_compare_embedding_engines.py  test_config.py  test_configure_index_backend.py  test_context_rendering.py  test_contracts.py  test_docstring_validation.py  test_download_embedding_model.py  test_embedding_engine_matrix_plan.py  test_embedding_model_manifest.py  test_embeddings.py  test_future_repo_ci.py  test_future_repo_export.py  test_future_repo_split_manifest.py  test_incremental_indexing.py  test_json_schema.py  test_memory_backend.py  test_onnx_parameter_sweep.py  test_plugins.py  test_prefix_filtering.py  test_prompt_rendering.py  test_query_signals.py  test_retrieval_merge.py  test_semgrep_rules.py  test_smoke.py  test_split_embedding_engine_experiment.py  test_symlist.py
(+31 files in other folders)
