[project]
name = "codira"
dynamic = ["version"]
description = "Local repository indexing and retrieval tool"
readme = "README.md"
authors = [{name = "Marco Coppola"}]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
semantic = [
  "sentence-transformers>=5.4,<6.0"
]

bundle-official = [
  "sentence-transformers>=5.4,<6.0",
  "codira-analyzer-python==1.5.2",
  "codira-analyzer-json==1.5.0",
  "codira-analyzer-c==1.5.5",
  "codira-analyzer-bash==1.5.0",
  "codira-backend-sqlite==1.5.2"
]

dev = [
  "black",
  "mypy",
  "ruff",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "packaging",
  "build",
  "setuptools>=61",
  "setuptools_scm[toml]>=8"
]

docs = [
  "mkdocs>=1.6,<2.0",
  "mkdocs-material>=9.7,<10.0",
  "mkdocs-awesome-pages-plugin>=2.10,<3.0",
  "mkdocstrings[python]>=1.0,<2.0"
]

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/codira/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
codira = ["py.typed", "schema/*.json"]

[project.scripts]
codira = "codira.cli:main"

[tool.black]
line-length = 88
target-version = ["py313"]
extend-exclude = """(?x)(
    ^/\\.mypy_cache(?:/|$)
  | ^/\\.mypy_cache_run(?:/|$)
  | ^/\\.mypy_cache_verify(?:/|$)
  | ^/\\.pre-commit-cache(?:/|$)
  | ^/\\.pytest_cache(?:/|$)
  | ^/\\.pytest_cache_local(?:/|$)
  | ^/\\.pytest_tmp(?:/|$)
  | ^/\\.pytest_diag[^/]*(?:/|$)
  | ^/\\.pt_[^/]+(?:/|$)
  | ^/\\.ruff_cache(?:/|$)
  | ^/\\.tmp-pytest(?:/|$)
  | ^/\\.tmp_pytest_run(?:/|$)
  | ^/pytest-cache-files-[^/]+(?:/|$)
)"""

[tool.ruff]
line-length = 88
target-version = "py313"
cache-dir = ".ruff_cache_run"
extend-exclude = [
  ".mypy_cache",
  ".mypy_cache_run",
  ".mypy_cache_verify",
  ".pre-commit-cache",
  ".pytest_cache",
  ".pytest_cache_local",
  ".pytest_tmp",
  ".pytest_diag*",
  ".pt_*",
  ".ruff_cache",
  ".ruff_cache_run",
  ".tmp-pytest",
  ".tmp_pytest_run",
  "pytest-cache-files-*",
]

#[tool.ruff.lint]
#select = [
#    "E",   # pycodestyle
#    "F",   # pyflakes
#    "I",   # isort
#]
#ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
strict = true
exclude = """(?x)(
    ^build/
  | ^dist/
  | ^src/codira\\.egg-info/
  | ^packages/[^/]+/build/
  | ^packages/[^/]+/dist/
  | ^packages/[^/]+/src/[^/]+\\.egg-info/
  | ^\\.mypy_cache(?:/|$)
  | ^\\.mypy_cache_run(?:/|$)
  | ^\\.pre-commit-cache(?:/|$)
  | ^\\.pytest_cache(?:/|$)
  | ^\\.pytest_cache_local(?:/|$)
  | ^\\.pytest_tmp(?:/|$)
  | ^\\.pytest_diag[^/]*(?:/|$)
  | ^\\.pt_[^/]+(?:/|$)
  | ^\\.ruff_cache(?:/|$)
  | ^\\.tmp-pytest(?:/|$)
  | ^\\.tmp_pytest_run(?:/|$)
  | ^pytest-cache-files-[^/]+(?:/|$)
)"""

[[tool.mypy.overrides]]
module = ["tree_sitter", "tree_sitter_c", "tree_sitter_bash", "sentence_transformers"]
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = [
  ".git",
  ".mypy_cache",
  ".mypy_cache_run",
  ".mypy_cache_verify",
  ".pre-commit-cache",
  ".pytest_cache",
  ".pytest_cache_local",
  ".pytest_tmp",
  ".pytest_diag*",
  ".pt_*",
  ".ruff_cache",
  ".ruff_cache_run",
  ".tmp-pytest",
  ".tmp_pytest_run",
  ".venv",
  "build",
  "dist",
  "pytest-cache-files-*",
]

[tool.ruff.lint]
# Baseline: real bugs + imports
# Phase 1 — Exception semantics
# Phase 2 — Import/type boundary
# Phase 3 — pathlib migration
# Phase 4 — Bug-risk & correctness
# Phase 5 — Return & logging correctness
# ------------------------------------------------------------
# Phase 6 — Robustness hardening (low-noise / high-value)
#
# Adds:
#   PLR  → risky constructs (not complexity limits)
#   RSE  → raise misuse (exception correctness)
#   SIM  → logic simplification traps (can reveal hidden bugs)
#   ICN  → import alias / shadowing correctness
#   TCH  → typing boundary correctness helpers
#
# Goal:
#   Catch remaining real defects without enabling high-noise families
#   (docstrings, typing completeness, complexity, perf, style).
# ------------------------------------------------------------
# Phase 7 — Engineering strictness (maturity phase, still low-noise)
#
# Adds:
#   S602, S607, S610, S701 → core subprocess / execution hygiene
#   C901, PLR0912          → light complexity detection
#   ERA                    → commented-out / dead code detection
#
# Goal:
#   Improve maintainability and execution safety without opening
#   style, typing, or documentation flood.
# ------------------------------------------------------------

select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # import order / correctness
    "UP",   # pyupgrade

    # ------------------------------------------------------------
    # Phase 1 — Exception semantics
    # ------------------------------------------------------------
    "BLE",
    "TRY",
    "EM",
    "S110",
    "S112",

    # ------------------------------------------------------------
    # Phase 2 — Import/type boundary
    # ------------------------------------------------------------
    "TC",

    # ------------------------------------------------------------
    # Phase 3 — pathlib migration
    # ------------------------------------------------------------
    "PTH",

    # ------------------------------------------------------------
    # Phase 4 — Bug-risk & correctness
    # ------------------------------------------------------------
    "B",      # flake8-bugbear (high-value correctness rules)

    # ------------------------------------------------------------
    # Phase 5 — Return & logging correctness
    # ------------------------------------------------------------
    "RET",    # return correctness
    "LOG",    # logging misuse

    # ------------------------------------------------------------
    # Phase 6 — Robustness hardening
    # ------------------------------------------------------------
    "PLR",    # pylint refactor (risky constructs only; complexity still ignored)
    "RSE",    # raise misuse / exception correctness
    "SIM",    # simplification rules revealing hidden logic issues
    "ICN",    # import alias / shadowing correctness
    "TCH",    # typing boundary correctness helpers
    "PIE",    # potential import cycles (can reveal hidden import issues)

    # ------------------------------------------------------------
    # Phase 7 — Engineering strictness (NEW)
    # ------------------------------------------------------------
    "S602",   # subprocess with shell=True
    "S607",   # partial path execution
    "S610",   # subprocess execution hygiene
    "S701",   # template autoescape (harmless if unused)
    "C901",   # function complexity
    "PLR0912",# too many branches
    "ERA",    # commented-out code / dead code
    "TD",     # type comment detection (encourage migration to inline typing)
]

ignore = [
    # ------------------------------------------------------------
    # Documentation / style
    # ------------------------------------------------------------
    "D",

    # ------------------------------------------------------------
    # Typing strictness (future phase)
    # ------------------------------------------------------------
    "ANN",
    "FBT",

    # ------------------------------------------------------------
    # Security — partially enforced
    # (S101 and S108 disabled in tests via per-file-ignores)
    # ------------------------------------------------------------
    "S603",
    "S324",

    # ------------------------------------------------------------
    # Complexity — postponed (except C901 + PLR0912 enabled in Phase 7)
    # ------------------------------------------------------------
    "PLR0911",
    "PLR0915",

    # ------------------------------------------------------------
    # Magic values / design
    # ------------------------------------------------------------
    "PLR2004",

    # ------------------------------------------------------------
    # Formatting (handled elsewhere)
    # ------------------------------------------------------------
    "COM812",
    "E501",

    # ------------------------------------------------------------
    # Hygiene / TODO
    # ------------------------------------------------------------
    "FIX002",

    # ------------------------------------------------------------
    # Performance / micro-refactors — still optional
    # ------------------------------------------------------------
    "FURB",
    "PERF",

    # ------------------------------------------------------------
    # Bugbear rules intentionally ignored
    # ------------------------------------------------------------
    "B008",   # function calls in default args (used intentionally sometimes)
    "B905",   # zip() strict — too noisy for now
]

fixable = [
    "I",      # import sorting
    "UP",     # pyupgrade
    "B007",   # unused loop variable → _var
    "B009",   # getattr(const) → attribute
]

unfixable = [
    "E501",   # never auto-wrap long lines (TeX/regex risk)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # asserts allowed in tests
    "S108",  # temp files allowed
    "S607",  # CLI tests intentionally invoke entrypoints via PATH (portable & venv-safe)
    "ARG",   # test functions often have unused arguments for fixtures or parameterization
    "PLR",   # test functions often have more branches than normal code (e.g. subtests, parameterization)
]
"tests/test_charset_decoding.py" = [
    "B017", # So only truly generic-failure tests allow broad Exception
]
"tests/helpers.py" = [
    "PLR0913", # test helper requires multiple independent knobs
]
"src/codira/registry.py" = [
    "BLE001", # third-party plugin loading must degrade gracefully on arbitrary plugin failures
]

[tool.ruff.lint.mccabe]
max-complexity = 15
