[project]
name = "codira"
dynamic = ["version"]
description = "Local repository indexing and retrieval tool"
readme = "README.md"
authors = [{name = "Marco Coppola"}]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
semantic = [
  "sentence-transformers>=5.4,<6.0"
]

bundle-official = [
  "sentence-transformers>=5.4,<6.0",
  "codira-analyzer-python==1.5.2",
  "codira-analyzer-json==1.5.1",
  "codira-analyzer-c==1.5.5",
  "codira-analyzer-bash==1.5.0",
  "codira-backend-sqlite==1.5.3",
  "codira-backend-duckdb==1.5.3"
]

dev = [
  "mypy",
  "ruff",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pyinstrument",
  "snakeviz",
  "packaging",
  "build",
  "setuptools>=68",
  "setuptools-scm>=8",
  "wheel",
]

docs = [
  "mkdocs>=1.6,<2.0",
  "mkdocs-material>=9.7,<10.0",
  "mkdocs-awesome-pages-plugin>=2.10,<3.0",
  "mkdocstrings[python]>=1.0,<2.0"
]

[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/codira/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
codira = ["py.typed", "schema/*.json"]

[project.scripts]
codira = "codira.cli:main"

[tool.uv.sources]
codira-analyzer-python = { path = "packages/codira-analyzer-python", editable = true }
codira-analyzer-json = { path = "packages/codira-analyzer-json", editable = true }
codira-analyzer-c = { path = "packages/codira-analyzer-c", editable = true }
codira-analyzer-bash = { path = "packages/codira-analyzer-bash", editable = true }
codira-backend-sqlite = { path = "packages/codira-backend-sqlite", editable = true }
codira-backend-duckdb = { path = "packages/codira-backend-duckdb", editable = true }
codira-bundle-official = { path = "packages/codira-bundle-official", editable = true }

# ============================================================
# Ruff
# ============================================================

[tool.ruff]
line-length = 88
target-version = "py313"

extend-exclude = [
  ".git",
  ".mypy_cache",
  ".mypy_cache_run",
  ".mypy_cache_verify",
  ".pre-commit-cache",
  ".pytest_cache",
  ".pytest_cache_local",
  ".pytest_tmp",
  ".pytest_diag*",
  ".pt_*",
  ".ruff_cache",
  ".ruff_cache_run",
  ".tmp-pytest",
  ".tmp_pytest_run",
  ".venv",
  "build",
  "dist",
  "node_modules",
  "pytest-cache-files-*",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",

  "BLE",
  "TRY",
  "EM",
  "S110",
  "S112",

  "TC",

  "PTH",

  "B",

  "RET",
  "LOG",

  "PLR",
  "RSE",
  "SIM",
  "ICN",
  "TCH",
  "PIE",

  "S602",
  "S607",
  "S610",
  "S701",

  "C901",
  "PLR0912",

  "ERA",
  "TD",
]

ignore = [
  "D",

  "ANN",
  "FBT",

  "S603",
  "S324",

  "PLR0911",
  "PLR0915",

  "PLR2004",

  "COM812",
  "E501",

  "FIX002",

  "FURB",
  "PERF",

  "B008",
  "B905",
]

fixable = [
  "I",
  "UP",
  "B007",
  "B009",
]

unfixable = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
  "S108",
  "S607",
  "ARG",
  "PLR",
]

"tests/test_charset_decoding.py" = [
  "B017",
]

"tests/helpers.py" = [
  "PLR0913",
]

"src/codira/registry.py" = [
  "BLE001",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-branches = 18

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["codira"]
combine-as-imports = true

# ============================================================
# mypy
# ============================================================

[tool.mypy]
python_version = "3.13"

strict = true

warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

show_error_codes = true

exclude = """(?x)(
    ^build/
  | ^dist/
  | ^src/codira\\.egg-info/
  | ^packages/[^/]+/build/
  | ^packages/[^/]+/dist/
  | ^packages/[^/]+/src/[^/]+\\.egg-info/
  | ^\\.mypy_cache(?:/|$)
  | ^\\.mypy_cache_run(?:/|$)
  | ^\\.mypy_cache_verify(?:/|$)
  | ^\\.pre-commit-cache(?:/|$)
  | ^\\.pytest_cache(?:/|$)
  | ^\\.pytest_cache_local(?:/|$)
  | ^\\.pytest_tmp(?:/|$)
  | ^\\.pytest_diag[^/]*(?:/|$)
  | ^\\.pt_[^/]+(?:/|$)
  | ^\\.ruff_cache(?:/|$)
  | ^\\.tmp-pytest(?:/|$)
  | ^\\.tmp_pytest_run(?:/|$)
  | ^pytest-cache-files-[^/]+(?:/|$)
)"""

[[tool.mypy.overrides]]
module = [
  "tree_sitter",
  "tree_sitter_c",
  "tree_sitter_bash",
]
ignore_missing_imports = true

# ============================================================
# pytest
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]

norecursedirs = [
  ".git",
  ".mypy_cache",
  ".pre-commit-cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "build",
  "dist",
  "node_modules",
]
