[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codira-demo-backend"
version = "0.1.0"
description = "Example third-party backend plugin for codira"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["codira"]

[project.entry-points."codira.backends"]
demo-backend = "codira_demo_backend:build_backend"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
